--- a/css/index.css
+++ b/css/index.css
@@ -248,7 +248,6 @@ header .color {
 
 /* SECTION SERVICE  */
 .service {
-  width: 100%;
   margin-bottom: 200px;
   bottom: 8px;
 }
@@ -286,6 +285,11 @@ header .color {
   -webkit-box-shadow: 10px 10px 20px #ddd;
   box-shadow: 10px 10px 20px #ddd;
   margin: 10% 0;
+  border: 3px solid #ccc;
+}
+.service_item p {
+  margin-top: 10px;
+  font-weight: bold;
 }
 .service_item h4 {
   position: absolute;
@@ -449,17 +453,178 @@ header .color {
 
 
 @media screen and (max-width: 780px) {
-  .catch_copy h1 {
-    font-size: 30px;
-  } 
-  .catch_copy h2 {
-    font-size: 15px;
-  } 
   .top_bg img {
     display: none;
   }
-  .fluid {
-    width: 400px;
-    height: 400px;
+  .catch_copy {
+    margin: 0 auto;
+    padding-top: 100px;
   }
+  header .header_logo img {
+    width: 100px;
+  }
+  .catch_copy h1 {
+    font-size: 25px;
+    width: 70%;
+  }
+  .detail_btn {
+    padding: 10px 30px;
+  }
+  .top {
+    margin-bottom: 100px;
+  }
+  .about {
+    margin-bottom: 100px;
+  }
+  .about_inner {
+    text-align: left;
+  }
+  .about_inner .line {
+    margin: 0;
+    width: 30px;
+  }
+  .about_inner h1 {
+    font-size: 30px;
+  }
+  .about_inner h2 {
+    font-size: 20px;
+  }
+  .about_inner p {
+    margin: 0;
+  }
+  .about_box {
+    text-align: left;
+  }
+  .about_tag .about_list {
+    justify-content: left;
+    margin-bottom: 10px
+  }
+  .about_tag1 {
+    padding: 10px 20px;
+    margin: 10px;
+  }
+  .about_tag2 {
+    padding: 10px 20px;
+    margin: 10px;
+  }
+
+  .news {
+    margin-bottom: 100px;
+  }
+  .news_inner {
+    text-align: left;
+  }
+  .news_inner .line {
+    margin: 0;
+    width: 30px;
+  }
+  .news_inner h1 {
+    font-size: 30px;
+  }
+  .news_inner h2 {
+    font-size: 20px;
+  }
+  .card_wrap {
+    display: block;
+  }
+  .card {
+    width: 300px;
+  }
+  .card img {
+    width: 300px;
+  }
+  .text a {
+    font-size: 15px;
+  }
+  .news_btn {
+    padding: 10px 30px;
+  }
+
+
+  .service {
+    margin-bottom: 100px;
+  }
+  .service_inner {
+    text-align: left;
+  }
+  .service_inner h1 {
+    font-size: 30px;
+  }
+  .service_inner h2 {
+    font-size: 20px;
+  }
+  .service_inner .line {
+    margin: 0;
+    width: 30px;
+  }
+  .service_list {
+    display: block;
+  }
+  .service_item {
+    width: 80%;
+    height: 320px;
+    display: block;
+  }
+  .service_btn {
+    padding: 10px 30px;
+  }
+
+  .contact_inner {
+    text-align: left;
+  }
+  .contact_inner h1 {
+    font-size: 25px;
+  }
+  .contact_inner h2 {
+    font-size: 15px;
+  }
+  .contact_inner .line {
+    margin: 0;
+    width: 30px;
+  }
+  .contact_item {
+    margin: 0;
+    width: 65%;
+  }
+  .contact_txt {
+    line-height: 1.2;
+  }
+  .contact_button {
+    padding: 10px 30px;
+  }
+  .contact {
+    margin-bottom: 100px;
+  }
+
+  .fluid {
+   display: none;
+  }
+  .fluid_two {
+    display: none;
+  }
+  .fluid_four {
+    display: none;
+  }
+  .contact-form .form input[type=text],
+  .contact-form .form input[type=email], 
+  .contact-form .form textarea, 
+  .contact-form .form select {
+    width: 80%;
+    margin-left: -10px;
+  }
+}
+
+
+
+@media screen and (max-width: 480px) {
+  .card {
+    width: 80%;
+  }
+  .service_item {
+    width: 100%;
+  }
+  .service_list {
+    display: block;
+  }
+
 }
