--- a/css/detail.css
+++ b/css/detail.css
@@ -123,6 +123,12 @@
   padding: 20px;
 }
 @media  screen and (max-width: 780px) {
+  .top_box {
+    width: 80%;
+  }
+  .top h1 {
+    font-size: 35px;
+  }
   .top_box,
   .top_box tr,
   .top_box td,
@@ -142,11 +148,17 @@
     width: 40%;
   }
   .detail_bg img {
-    display: none;
+    width: 300px;
+    height: 300px;
+    z-index: -10;
+    opacity: .7;
   }
   .fluid {
     width: 500px;
     height: 500px;
+  }
+  .fluid_two {
+    display: none;
   }
 }
 
@@ -155,4 +167,16 @@
   display: inline-block;
   border: 1px solid #ccc;
   box-shadow: 0 2px 10px #999;
+}
+.map {
+  width: 640px;
+  height: 550px;
+}
+
+@media screen and (max-width: 480px) {
+  .map {
+    width: 310px;
+    height: 310px;
+  }
+  
 }
