--- a/css/index.css
+++ b/css/index.css
@@ -454,7 +454,10 @@ header .color {
 
 @media screen and (max-width: 780px) {
   .top_bg img {
-    display: none;
+    width: 300px;
+    height: 300px;
+    z-index: -10;
+    opacity: .7;
   }
   .catch_copy {
     margin: 0 auto;
