--- a/css/news.css
+++ b/css/news.css
@@ -178,13 +178,29 @@
 }
 .info dd {
   margin-left: 0.5em;
+  text-align: right;
 }
 
 .news_bg img {
-  display: none;
+  width: 300px;
+  height: 300px;
+  z-index: -10;
+  opacity: .7;
+}
+.news_title h1 {
+  font-size: 30px;
 }
 .fluid {
   width: 500px;
   height: 500px;
+}
+.card_wrap {
+  justify-content: left;
+}
+.card {
+  width: 90%;
+}
+.card_img img {
+  width: 300px;
 }
 }
