--- a/css/service.css
+++ b/css/service.css
@@ -273,10 +273,33 @@ table thead tr{
   }
 
   .service_bg img {
-    display: none;
+    width: 300px;
+    height: 300px;
+    z-index: -10;
+    opacity: .7;
   }
   .fluid {
     width: 500px;
     height: 500px;
+  }
+
+  .mentor_member {
+    width: 80%;
+  }
+  .circle_list a {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 10px;
+}
+  .circle_list li {
+    margin:  50px 0;
+  }
+  .top h1 {
+    font-size: 30px;
+  }
+  .mentor_title h1 {
+    font-size: 30px;
   }
 }
