--- a/css/detail.css
+++ b/css/detail.css
@@ -123,7 +123,22 @@
   border: 1px solid #999;
   padding: 20px;
 }
+
+.sarch input:first-of-type:focus {
+  background: linear-gradient( #fff, #e1eec1);
+}
+
 @media  screen and (max-width: 780px) {
+  header .navbar {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: none;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    background: linear-gradient(#fff, #e1eec1);
+  }
   .top_box {
     width: 80%;
   }
