--- a/css/index.css
+++ b/css/index.css
@@ -116,7 +116,7 @@ header .color {
   width: 60%;
   font-size: 15px;
   padding-left: 10px;
-  font-weight: bold;
+  font-weight: 500;
   margin: 0 auto;
   text-align: left;
   border-left: 8px solid #8f64ab;
@@ -286,10 +286,12 @@ header .color {
   -webkit-box-shadow: 10px 10px 20px #ddd;
   box-shadow: 10px 10px 20px #ddd;
   margin: 10% 0;
-  border: 3px solid #ccc;
+  border: 3px solid #999;
 }
 .service_item p {
-  margin-top: 10px;
+  text-align: left;
+  margin-top: 60px;
+  line-height: 1.8;
   font-weight: bold;
 }
 .service_item h4 {
@@ -351,6 +353,12 @@ header .color {
   height: 500px;
   border-radius: 46%;
   animation: drift 20s infinite linear;
+}
+
+
+/* FOOTER BUTTON  */
+.sarch input:first-of-type:focus {
+  background: linear-gradient( #fff, #c5b2d6);
 }
 
 
@@ -454,6 +462,16 @@ header .color {
 
 
 @media screen and (max-width: 780px) {
+  header .navbar {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: none;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    background: linear-gradient(#fff, #c5b2d6);
+  }
   .top_bg img {
     width: 300px;
     height: 300px;
@@ -568,6 +586,10 @@ header .color {
     width: 80%;
     height: 320px;
     display: block;
+  }
+  .service_item p {
+    margin: 0;
+    font-size: 15px;
   }
   .service_btn {
     padding: 10px 30px;
