--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,7 @@ header .color {
   margin-top: -150px;
   margin-right: -70px;
   box-shadow: 0 2px 30px #999;
-  background: linear-gradient(#c5b2d6, #a88bde, #8f64ab);
+  background: linear-gradient(#ffccff, #ff99ff, #ff66ff);
   width: 700px;
   height: 700px;
   transform-origin: 50% 48%;
@@ -71,16 +71,16 @@ header .color {
   border-radius: 20px;
   color: #702c91;
   text-shadow: 1px 1px 1px rgba(255, 255, 255, .5);
-  background: -moz-linear-gradient(top left, #fff, #461c54);
-  background: -webkit-linear-gradient(top left, #fff, #461c54);
-  background: linear-gradient(to bottom right, #fff, #461c54);
+  background: -moz-linear-gradient(top left, #fff, #ff66ff);
+  background: -webkit-linear-gradient(top left, #fff, #ff66ff);
+  background: linear-gradient(to bottom right, #fff, #ff66ff);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, .3);
-  border-bottom: 3px solid #6a397d;
+  border-bottom: 3px solid #cc66ff;
 }
 .detail_btn:hover {
-  background: -moz-linear-gradient(top right, #fff, #461c54);
-  background: -webkit-linear-gradient(top right, #fff, #461c54);
-  background: linear-gradient(to top left, #fff, #461c54);
+  background: -moz-linear-gradient(top right, #fff, #ff66ff);
+  background: -webkit-linear-gradient(top right, #fff, #ff66ff);
+  background: linear-gradient(to top left, #fff, #ff66ff);
 }
 .detail_btn:active {
   -webkit-transform: translateY(4px);
@@ -135,11 +135,11 @@ header .color {
   border-radius: 20px;
   color: #702c91;
   text-shadow: 1px 1px 1px rgba(255, 255, 255, .5);
-  background: -moz-linear-gradient(top left, #fff, #461c54);
-  background: -webkit-linear-gradient(top left, #fff, #461c54);
-  background: linear-gradient(to bottom right, #fff, #461c54);
+  background: -moz-linear-gradient(top left, #fff, #ff66ff);
+  background: -webkit-linear-gradient(top left, #fff, #ff66ff);
+  background: linear-gradient(to bottom right, #fff, #ff66ff);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, .3);
-  border-bottom: 3px solid #6a397d;
+  border-bottom: 3px solid #cc66ff;
 }
 .about_tag2 {
   display: inline-block;
@@ -149,11 +149,11 @@ header .color {
   border-radius: 20px;
   color: #702c91;
   text-shadow: 1px 1px 1px rgba(255, 255, 255, .5);
-  background: -moz-linear-gradient(top left, #fff, #461c54);
-  background: -webkit-linear-gradient(top left, #fff, #461c54);
-  background: linear-gradient(to bottom right, #fff, #461c54);
+  background: -moz-linear-gradient(top left, #fff, #ff66ff);
+  background: -webkit-linear-gradient(top left, #fff, #ff66ff);
+  background: linear-gradient(to bottom right, #fff, #ff66ff);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, .3);
-  border-bottom: 3px solid #6a397d;
+  border-bottom: 3px solid #cc66ff;
 }
 
 
@@ -204,7 +204,7 @@ header .color {
   top: 0;
   left: 0;
   box-shadow: 0 2px 30px #999;
-  background: linear-gradient(#c5b2d6, #a88bde, #8f64ab);
+  background: linear-gradient(#ffccff, #ff99ff, #ff66ff);
   width: 400px;
   height: 400px;
   border-radius: 45%;
@@ -217,16 +217,16 @@ header .color {
   border-radius: 20px;
   color: #702c91;
   text-shadow: 1px 1px 1px rgba(255, 255, 255, .5);
-  background: -moz-linear-gradient(top left, #fff, #461c54);
-  background: -webkit-linear-gradient(top left, #fff, #461c54);
-  background: linear-gradient(to bottom right, #fff, #461c54);
+  background: -moz-linear-gradient(top left, #fff, #ff66ff);
+  background: -webkit-linear-gradient(top left, #fff, #ff66ff);
+  background: linear-gradient(to bottom right, #fff, #ff66ff);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, .3);
-  border-bottom: 3px solid #6a397d;
+  border-bottom: 3px solid #cc66ff;
 }
 .news_btn:hover {
-  background: -moz-linear-gradient(top right, #fff, #461c54);
-  background: -webkit-linear-gradient(top right, #fff, #461c54);
-  background: linear-gradient(to top left, #fff, #461c54);
+  background: -moz-linear-gradient(top right, #fff, #ff66ff);
+  background: -webkit-linear-gradient(top right, #fff, #ff66ff);
+  background: linear-gradient(to top left, #fff, #ff66ff);
 }
 .news_btn:active {
   -webkit-transform: translateY(4px);
@@ -240,7 +240,7 @@ header .color {
   bottom: 0;
   right: 0;
   box-shadow: 0 2px 30px #999;
-  background: linear-gradient(#c5b2d6, #a88bde, #8f64ab);
+  background: linear-gradient(#ffccff, #ff99ff, #ff66ff);
   width: 210px;
   height: 200px;
   border-radius: 46%;
@@ -310,16 +310,16 @@ header .color {
   border-radius: 20px;
   color: #702c91;
   text-shadow: 1px 1px 1px rgba(255, 255, 255, .5);
-  background: -moz-linear-gradient(top left, #fff, #461c54);
-  background: -webkit-linear-gradient(top left, #fff, #461c54);
-  background: linear-gradient(to bottom right, #fff, #461c54);
+  background: -moz-linear-gradient(top left, #fff, #ff66ff);
+  background: -webkit-linear-gradient(top left, #fff, #ff66ff);
+  background: linear-gradient(to bottom right, #fff, #ff66ff);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, .3);
-  border-bottom: 3px solid #6a397d;
+  border-bottom: 3px solid #cc66ff;
 }
 .service_btn:hover {
-  background: -moz-linear-gradient(top right, #fff, #461c54);
-  background: -webkit-linear-gradient(top right, #fff, #461c54);
-  background: linear-gradient(to top left, #fff, #461c54);
+  background: -moz-linear-gradient(top right, #fff, #ff66ff);
+  background: -webkit-linear-gradient(top right, #fff, #ff66ff);
+  background: linear-gradient(to top left, #fff, #ff66ff);
 }
 .service_btn:active {
   -webkit-transform: translateY(4px);
@@ -335,7 +335,7 @@ header .color {
   left: 0;
   margin-left: -300px;
   box-shadow: 0 2px 30px #999;
-  background: linear-gradient(#c5b2d6, #a88bde, #8f64ab);
+  background: linear-gradient(#ffccff, #ff99ff, #ff66ff);
   width: 400px;
   height: 400px;
   border-radius: 47%;
@@ -348,7 +348,7 @@ header .color {
   right: 0;
   margin-right: -300px;
   box-shadow: 0 2px 30px #999;
-  background: linear-gradient(#c5b2d6, #a88bde, #8f64ab);
+  background: linear-gradient(#ffccff, #ff99ff, #ff66ff);
   width: 500px;
   height: 500px;
   border-radius: 46%;
@@ -391,7 +391,7 @@ header .color {
 }
 .contact_txt {
   line-height: 1.8;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .form .label {
@@ -428,18 +428,20 @@ header .color {
   padding: 20px 50px;
   font-weight: bold;
   border-radius: 20px;
-  color: #702c91;
   text-shadow: 1px 1px 1px rgba(255, 255, 255, .5);
-  background: -moz-linear-gradient(top left, #fff, #461c54);
-  background: -webkit-linear-gradient(top left, #fff, #461c54);
-  background: linear-gradient(to bottom right, #fff, #461c54);
+  background: -moz-linear-gradient(top left, #fff, #ff66ff);
+  background: -webkit-linear-gradient(top left, #fff, #ff66ff);
+  background: linear-gradient(to bottom right, #fff, #ff66ff);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, .3);
-  border-bottom: 3px solid #6a397d;
+  border-bottom: 3px solid #cc66ff;
+}
+.contact_button a {
+  color: #702c91;
 }
 .contact_button:hover {
-  background: -moz-linear-gradient(top right, #fff, #461c54);
-  background: -webkit-linear-gradient(top right, #fff, #461c54);
-  background: linear-gradient(to top left, #fff, #461c54);
+  background: -moz-linear-gradient(top right, #fff, #ff66ff);
+  background: -webkit-linear-gradient(top right, #fff, #ff66ff);
+  background: linear-gradient(to top left, #fff, #ff66ff);
 }
 .contact_button:active {
   -webkit-transform: translateY(4px);
@@ -453,7 +455,7 @@ header .color {
   bottom: 0;
   margin-left: -320px;
   box-shadow: 0 2px 30px #999;
-  background: linear-gradient(#c5b2d6, #a88bde, #8f64ab);
+  background: linear-gradient(#ffccff, #ff99ff, #ff66ff);
   width: 600px;
   height: 600px;
   border-radius: 47%;
@@ -476,7 +478,6 @@ header .color {
     width: 300px;
     height: 300px;
     z-index: -10;
-    opacity: .7;
   }
   .catch_copy {
     margin: 0 auto;
