--- a/css/news.css
+++ b/css/news.css
@@ -132,7 +132,7 @@
   text-align: left;
   font-weight: bold;
   padding: 20px 0 20px 30px;
-  line-height: 1.2;
+  line-height: 1.5;
 }
 .one a {
   color: cornflowerblue;
@@ -202,7 +202,6 @@
   width: 300px;
   height: 300px;
   z-index: -10;
-  opacity: .7;
 }
 .news_title h1 {
   font-size: 30px;
@@ -219,5 +218,9 @@
 }
 .card_img img {
   width: 300px;
+}
+.text {
+  font-size: 14px;
+  font-weight: 500;
 }
 }
