--- a/css/detail.css
+++ b/css/detail.css
@@ -155,6 +155,9 @@
   .top_box th {
     width: auto;
   }
+  .detail {
+    width: 90%;
+  }
   .detail_inner h1 {
     font-size: 30px;
   }
@@ -167,11 +170,10 @@
   .detail_bg img {
     width: 300px;
     height: 300px;
-    z-index: -10;
+    z-index: -5;
   }
   .fluid {
-    width: 500px;
-    height: 500px;
+    display: none;
   }
   .fluid_two {
     display: none;
