--- a/css/index.css
+++ b/css/index.css
@@ -474,9 +474,12 @@ header .color {
     z-index: 5;
     background: linear-gradient(#fff, #c5b2d6);
   }
+  .top {
+    width: 90%;
+  }
   .top_bg img {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     z-index: -10;
   }
   .catch_copy {
@@ -498,6 +501,7 @@ header .color {
   }
   .about {
     margin-bottom: 100px;
+    width: 90%;
   }
   .about_inner {
     text-align: left;
@@ -533,6 +537,7 @@ header .color {
 
   .news {
     margin-bottom: 100px;
+    width: 90%;
   }
   .news_inner {
     text-align: left;
@@ -554,7 +559,7 @@ header .color {
     width: 300px;
   }
   .card img {
-    width: 300px;
+    width: 270px;
   }
   .text a {
     font-size: 15px;
@@ -596,6 +601,9 @@ header .color {
     padding: 10px 30px;
   }
 
+  .contact {
+    width: 90%;
+  }
   .contact_inner {
     text-align: left;
   }
