--- a/css/news.css
+++ b/css/news.css
@@ -199,16 +199,21 @@
 }
 
 .news_bg img {
-  width: 300px;
-  height: 300px;
-  z-index: -10;
+  width: 200px;
+  height: 200px;
+  z-index: -5;
+}
+.wrapper {
+  padding: 0;
 }
 .news_title h1 {
   font-size: 30px;
 }
 .fluid {
-  width: 500px;
-  height: 500px;
+  display: none;
+}
+.fluid_two {
+  display: none;
 }
 .card_wrap {
   justify-content: left;
