--- a/css/common1.css
+++ b/css/common1.css
@@ -111,7 +111,7 @@ footer {
   text-decoration: underline;
 }
 .footer .footer_wrap {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -160,14 +160,19 @@ input:first-of-type:focus {
 }
 
 @media screen and (max-width: 780px) {
-  .footer .footer_wrap {
-    width: 100%;
-    padding: 0 10px;
+  .footer .footer_wrap .footer_box {
     box-sizing: border-box;
-    text-align: left;
+    margin: 0 auto;
+    text-align: center;
+  }
+  .footer .footer_wrap .copyright {
+    text-align: center;
   }
   section .wrapper {
     padding: 0;
+  }
+  .sarch {
+    margin: 0 auto;
   }
   .footer .footer_wrap .footer_box {
   width: 100%;
@@ -175,9 +180,6 @@ input:first-of-type:focus {
   .footer .footer_wrap .footer_box ul li a {
     display: block;
     padding: 5px 15px;
-  }
-  .sarch {
-    margin: 0 auto;
   }
   .fluid_four {
     display: none;
